--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@
         </h1>
     </body>
     <html>
+        <b>RandomVerse Studio is a game studio founded by Warly , PizzaDev and other legends , </b>
