--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <h1>
             RandomVerse Multiverse
         </h1>
+        <h2>
+            Game Devs into making
+        </h2>
     </body>
     <html>
         <b>RandomVerse Studio is a game studio founded by Warly , PizzaDev and other legends , </b>
