--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>
-            RandomVerse Multiverse
+           <u> RandomVerse Multiverse </u> 
         </h1>
         <h2>
             Game Devs into making
