--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
         <hr>
     </body>
     <html>
-        <b>RandomVerse Studio is a game studio founded by Warly , PizzaDev and other legends , </b>
+        <b>RandomVerse Studio is a game studio founded by <a href="https://www.youtube.com/watch?v=QB7ACr7pUuE">Warly</a> , PizzaDev and other legends , </b>
